# image-organiser

./: CLAUDE.md  Cargo.toml
spec/: personas.md  product-spec.md  user-stories.md
src/: lib.rs  main.rs  manifest.rs  metadata.rs  scan.rs
tests/: import.rs
