[package]
name = "image-organiser"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
serde_json = "1.0"
regex-lite = "0.1"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
nom-exif = "1.5"
sha2 = "0.10"
jiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.18"
rayon = "1.10"
